--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <img src="https://static.gogo.moe/avatar.jpg" alt="Gogo's avatar">
             <div class="text-block">
                 <h1>江川 | Gogo</h1>
-                <p>生于1999年的浙江台州。热爱计算机相关技术，自 2014 年接触编程后开始不断学习相关知识。目前对软件工程、计算机图形学、编译原理、 函数式编程等方向感兴趣。</p>
+                <p>生于1999年的浙江台州。热爱计算机相关技术，自 2014 年接触编程后开始不断学习相关知识。目前对软件工程、计算机图形学、编译原理、函数式编程、计算机网络等方向感兴趣。</p>
                 <p>Born in Taizhou, Zhejiang in 1999. Interested in computer technology. Learning related knowledge
                     since started programing. Currently interested in software engineering, computer graphics,
-                    compilers, functional programming and etc.</p>
+                    compilers, functional programming, computer network and etc.</p>
             </div>
         </div>
 
@@ -41,14 +41,18 @@
             <h2>工作经历 | Work Experience</h2>
             <div class="text-block">
                 <h3>学生助理 | Students Assistant</h3>
-                <p>计算机程序设计基础 A | Introduce to Computer Programming A (2019 Spring)</p>
+                <p>计算机程序设计基础 A | Introduce to Computer Programming A (2019 Spring、2019 Autumn)</p>
             </div>
         </div>
 
         <div class="experience">
             <h2>项目经历 | Project Experience</h2>
             <div class="text-block">
-                <h3>SUSTech CS102A OfflineJudge(2019.3)</h3>
+                <h3>SUSTech XuanKe (2019.9)</h3>
+                <p>基于 Vert.x 的选课程序，理论上支持集群分布式抢课</p>
+                <p>A Program based Vert.x that used to select course</p>
+
+                <h3>SUSTech CS102A OfflineJudge (2019.3)</h3>
                 <p>为了改程序设计课作业实现的测评机。侧重于发现代码中的错误，并尝试自动修复错误</p>
                 <p>An offline judge for CS102A. Focus on mistakes discovery and fixing automatically</p>
 
@@ -79,6 +83,17 @@
                 <h3>ASC19 世界大学生超级计算机竞赛 初赛二等奖 | The Second Class Prize of ASC19 Student Supercomputer Challenge
                     Preliminary Contest (2019.03)</h3>
                 <h3>2018 南方科技大学程序设计竞赛 三等奖 | The Third Class Honor of 2018 SUSTech Programming Contest (2018.12)</h3>
+            </div>
+        </div>
+
+        <div class="experience">
+            <h2>技术栈 | Stacks</h2>
+            <div class="text-block">
+                <h3>Java (2014)</h3>
+                <h3>Html、CSS、JavaScript (2016)</h3>
+                <h3>Kotlin (2017)</h3>
+                <h3>Python (2018)</h3>
+                <h3>Haskell (2019)</h3>
             </div>
         </div>
     </div>
