--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="experience">
             <h2>工作经历 | Work Experience</h2>
             <div class="text-block">
-                <h3>学生助理 | Students Assistant</h3>
+                <h3>南方科技大学 · 学生助理 | Southern University of Science and Technology · Students Assistant</h3>
                 <p>计算机程序设计基础 A | Introduce to Computer Programming A (2019 Spring、2019 Autumn)</p>
             </div>
         </div>
@@ -48,9 +48,6 @@
         <div class="experience">
             <h2>项目经历 | Project Experience</h2>
             <div class="text-block">
-                <h3>SUSTech XuanKe (2019.9)</h3>
-                <p>基于 Vert.x 的选课程序，理论上支持集群分布式抢课</p>
-                <p>A Program based Vert.x that used to select course</p>
 
                 <h3>SUSTech CS102A OfflineJudge (2019.3)</h3>
                 <p>为了改程序设计课作业实现的测评机。侧重于发现代码中的错误，并尝试自动修复错误</p>
@@ -71,7 +68,7 @@
             <h2>教育经历 | Educational Experience</h2>
             <div class="text-block">
                 <h3>南方科技大学 · 本科 | Southern University of Science and Technology (2018.09 - )</h3>
-                <p>计算机科学与技术专业 | Computer Science and Technology</p>
+                <p>计算机科学与工程系 | Computer Science and Engineering</p>
 
                 <h3>台州市书生中学 | Sunson Middle School (2015.09 - 2018.06)</h3>
             </div>
@@ -83,6 +80,7 @@
                 <h3>ASC19 世界大学生超级计算机竞赛 初赛二等奖 | The Second Class Prize of ASC19 Student Supercomputer Challenge
                     Preliminary Contest (2019.03)</h3>
                 <h3>2018 南方科技大学程序设计竞赛 三等奖 | The Third Class Honor of 2018 SUSTech Programming Contest (2018.12)</h3>
+                <h3>第二届南方科技大学程序设计竞赛 三等奖 | The Third Class Honor of The 2nd SUSTech Programming Contest (2019.12)</h3>
             </div>
         </div>
 
