--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <h3>SUSTech CS102A OfflineJudge (2019.3)</h3>
                 <p>为了改程序设计课作业实现的测评机。侧重于发现代码中的错误，并尝试自动修复错误</p>
-                <p>An offline judge for CS102A. Focus on mistakes discovery and fixing automatically</p>
+                <p>An offline judger for CS102A. Focus on mistakes discovery and fixing automatically</p>
 
                 <h3>YuyukoMod (2018.7)</h3>
                 <p>游戏 Slay The Spire 的MOD，在 Steam 游戏平台上取得 2w+ 的下载量</p>
