update print template

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>I'm Gogo</title>
+    <title>江川 Jiang Chuan</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://cdn.jsdelivr.net/npm/ant-design-icons/dist/anticons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="resume.css">
@@ -29,11 +29,41 @@
         <div class="profile">
             <img src="https://static.gogo.moe/avatar.jpg" alt="Gogo's avatar">
             <div class="text-block">
-                <h1>江川 | Gogo</h1>
+                <h1>江川 | Jiang Chuan</h1>
                 <p>生于1999年的浙江台州。热爱计算机相关技术，自 2014 年接触编程后开始不断学习相关知识。目前对软件工程、计算机图形学、编译原理、函数式编程、计算机网络等方向感兴趣。</p>
                 <p>Born in Taizhou, Zhejiang in 1999. Interested in computer technology. Learning related knowledge
                     since started programing. Currently interested in software engineering, computer graphics,
                     compilers, functional programming, computer network and etc.</p>
+            </div>
+        </div>
+
+        <div class="information">
+            <h2>个人信息 | Personal Information</h2>
+            <div class="value-table">
+                <div class="item">
+                    <div class="key">姓名 | Name</div>
+                    <div class="value">江川 | Jiang Chuan</div>
+                </div>
+                <div class="item">
+                    <div class="key">年龄 | Age</div>
+                    <div class="value">20</div>
+                </div>
+                <div class="item">
+                    <div class="key">性别 | Gender</div>
+                    <div class="value">跨性别女性 | MtF (Male to Female)</div>
+                </div>
+                <div class="item">
+                    <div class="key">电话 | Phone</div>
+                    <div class="value">(+86)175-5726-5526</div>
+                </div>
+                <div class="item">
+                    <div class="key">邮箱 | Mail</div>
+                    <div class="value"><a href="mailto:gogo@gogo.moe">gogo@gogo.moe</a></div>
+                </div>
+                <div class="item">
+                    <div class="key">Github</div>
+                    <div class="value"><a href="https://github.com/Gogomoe">https://github.com/Gogomoe</a></div>
+                </div>
             </div>
         </div>
 
