--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>江川 Jiang Chuan</title>
+    <title>江川 | Jiang Chuan</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://cdn.jsdelivr.net/npm/ant-design-icons/dist/anticons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="resume.css">
@@ -16,7 +16,7 @@
             <a href="https://gogo.moe/"><i class="fa fa-home"></i></a>
             <a href="https://github.com/Gogomoe"><i class="ai ai-github"></i></a>
             <a href="https://t.me/Gogomoe"><i class="fa fa-telegram"></i></a>
-            <a href="mailto:gogo@gogo.moe"><i class="ai ai-mail"></i></a>
+            <a href="mailto:gogo81745.moe@gmail.com"><i class="ai ai-mail"></i></a>
             <a href="https://keybase.io/gogomoe"><i class="ai ai-key"></i></a>
         </div>
     </div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="item">
                     <div class="key">邮箱 | Mail</div>
-                    <div class="value"><a href="mailto:gogo@gogo.moe">gogo@gogo.moe</a></div>
+                    <div class="value"><a href="mailto:gogo81745.moe@gmail.com">gogo81745.moe@gmail.com</a></div>
                 </div>
                 <div class="item">
                     <div class="key">Github</div>
