use different folds

--- a/2020_Google_STEP/index.html
+++ b/2020_Google_STEP/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>I'm Gogo</title>
+    <title>江川 | Jiang Chuan</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://cdn.jsdelivr.net/npm/ant-design-icons/dist/anticons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="resume.css">
@@ -16,7 +16,7 @@
             <a href="https://gogo.moe/"><i class="fa fa-home"></i></a>
             <a href="https://github.com/Gogomoe"><i class="ai ai-github"></i></a>
             <a href="https://t.me/Gogomoe"><i class="fa fa-telegram"></i></a>
-            <a href="mailto:gogo@gogo.moe"><i class="ai ai-mail"></i></a>
+            <a href="mailto:gogo81745.moe@gmail.com"><i class="ai ai-mail"></i></a>
             <a href="https://keybase.io/gogomoe"><i class="ai ai-key"></i></a>
         </div>
     </div>
@@ -29,7 +29,7 @@
         <div class="profile">
             <img src="https://static.gogo.moe/avatar.jpg" alt="Gogo's avatar">
             <div class="text-block">
-                <h1>江川 | Gogo</h1>
+                <h1>江川 | Jiang Chuan</h1>
                 <p>生于1999年的浙江台州。热爱计算机相关技术，自 2014 年接触编程后开始不断学习相关知识。目前对软件工程、计算机图形学、编译原理、函数式编程、计算机网络等方向感兴趣。</p>
                 <p>Born in Taizhou, Zhejiang in 1999. Interested in computer technology. Learning related knowledge
                     since started programing. Currently interested in software engineering, computer graphics,
@@ -37,10 +37,40 @@
             </div>
         </div>
 
+        <div class="information">
+            <h2>个人信息 | Personal Information</h2>
+            <div class="value-table">
+                <div class="item">
+                    <div class="key">姓名 | Name</div>
+                    <div class="value">江川 | Jiang Chuan</div>
+                </div>
+                <div class="item">
+                    <div class="key">年龄 | Age</div>
+                    <div class="value">20</div>
+                </div>
+                <div class="item">
+                    <div class="key">性别 | Gender</div>
+                    <div class="value">跨性别女性 | MtF (Male to Female)</div>
+                </div>
+                <div class="item">
+                    <div class="key">电话 | Phone</div>
+                    <div class="value">(+86)175-5726-5526</div>
+                </div>
+                <div class="item">
+                    <div class="key">邮箱 | Mail</div>
+                    <div class="value"><a href="mailto:gogo81745.moe@gmail.com">gogo81745.moe@gmail.com</a></div>
+                </div>
+                <div class="item">
+                    <div class="key">Github</div>
+                    <div class="value"><a href="https://github.com/Gogomoe">https://github.com/Gogomoe</a></div>
+                </div>
+            </div>
+        </div>
+
         <div class="experience">
             <h2>工作经历 | Work Experience</h2>
             <div class="text-block">
-                <h3>学生助理 | Students Assistant</h3>
+                <h3>南方科技大学 · 学生助理 | Southern University of Science and Technology · Students Assistant</h3>
                 <p>计算机程序设计基础 A | Introduce to Computer Programming A (2019 Spring、2019 Autumn)</p>
             </div>
         </div>
@@ -48,13 +78,10 @@
         <div class="experience">
             <h2>项目经历 | Project Experience</h2>
             <div class="text-block">
-                <h3>SUSTech XuanKe (2019.9)</h3>
-                <p>基于 Vert.x 的选课程序，理论上支持集群分布式抢课</p>
-                <p>A Program based Vert.x that used to select course</p>
 
                 <h3>SUSTech CS102A OfflineJudge (2019.3)</h3>
                 <p>为了改程序设计课作业实现的测评机。侧重于发现代码中的错误，并尝试自动修复错误</p>
-                <p>An offline judge for CS102A. Focus on mistakes discovery and fixing automatically</p>
+                <p>An offline judger for CS102A. Focus on mistakes discovery and fixing automatically</p>
 
                 <h3>YuyukoMod (2018.7)</h3>
                 <p>游戏 Slay The Spire 的MOD，在 Steam 游戏平台上取得 2w+ 的下载量</p>
@@ -71,7 +98,7 @@
             <h2>教育经历 | Educational Experience</h2>
             <div class="text-block">
                 <h3>南方科技大学 · 本科 | Southern University of Science and Technology (2018.09 - )</h3>
-                <p>计算机科学与技术专业 | Computer Science and Technology</p>
+                <p>计算机科学与工程系 | Computer Science and Engineering</p>
 
                 <h3>台州市书生中学 | Sunson Middle School (2015.09 - 2018.06)</h3>
             </div>
@@ -83,6 +110,7 @@
                 <h3>ASC19 世界大学生超级计算机竞赛 初赛二等奖 | The Second Class Prize of ASC19 Student Supercomputer Challenge
                     Preliminary Contest (2019.03)</h3>
                 <h3>2018 南方科技大学程序设计竞赛 三等奖 | The Third Class Honor of 2018 SUSTech Programming Contest (2018.12)</h3>
+                <h3>第二届南方科技大学程序设计竞赛 三等奖 | The Third Class Honor of The 2nd SUSTech Programming Contest (2019.12)</h3>
             </div>
         </div>
 
