--- a/2020_Google_STEP/zh_cn/index.html
+++ b/2020_Google_STEP/zh_cn/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>I'm Gogo</title>
+    <title>江川</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://cdn.jsdelivr.net/npm/ant-design-icons/dist/anticons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="../resume.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
             <a href="https://gogo.moe/"><i class="fa fa-home"></i></a>
             <a href="https://github.com/Gogomoe"><i class="ai ai-github"></i></a>
             <a href="https://t.me/Gogomoe"><i class="fa fa-telegram"></i></a>
-            <a href="mailto:gogo@gogo.moe"><i class="ai ai-mail"></i></a>
+            <a href="mailto:gogo81745.moe@gmail.com"><i class="ai ai-mail"></i></a>
             <a href="https://keybase.io/gogomoe"><i class="ai ai-key"></i></a>
         </div>
     </div>
@@ -29,68 +29,87 @@
         <div class="profile">
             <img src="https://static.gogo.moe/avatar.jpg" alt="Gogo's avatar">
             <div class="text-block">
-                <h1>江川 | Gogo</h1>
+                <h1>江川</h1>
                 <p>生于1999年的浙江台州。热爱计算机相关技术，自 2014 年接触编程后开始不断学习相关知识。目前对软件工程、计算机图形学、编译原理、函数式编程、计算机网络等方向感兴趣。</p>
-                <p>Born in Taizhou, Zhejiang in 1999. Interested in computer technology. Learning related knowledge
-                    since started programing. Currently interested in software engineering, computer graphics,
-                    compilers, functional programming, computer network and etc.</p>
+            </div>
+        </div>
+
+        <div class="information">
+            <h2>个人信息</h2>
+            <div class="value-table">
+                <div class="item">
+                    <div class="key">姓名</div>
+                    <div class="value">江川</div>
+                </div>
+                <div class="item">
+                    <div class="key">年龄</div>
+                    <div class="value">20</div>
+                </div>
+                <div class="item">
+                    <div class="key">性别</div>
+                    <div class="value">跨性别女性</div>
+                </div>
+                <div class="item">
+                    <div class="key">电话</div>
+                    <div class="value">(+86)175-5726-5526</div>
+                </div>
+                <div class="item">
+                    <div class="key">邮箱</div>
+                    <div class="value"><a href="mailto:gogo81745.moe@gmail.com">gogo81745.moe@gmail.com</a></div>
+                </div>
+                <div class="item">
+                    <div class="key">Github</div>
+                    <div class="value"><a href="https://github.com/Gogomoe">https://github.com/Gogomoe</a></div>
+                </div>
             </div>
         </div>
 
         <div class="experience">
-            <h2>工作经历 | Work Experience</h2>
+            <h2>工作经历</h2>
             <div class="text-block">
-                <h3>学生助理 | Students Assistant</h3>
-                <p>计算机程序设计基础 A | Introduce to Computer Programming A (2019 Spring、2019 Autumn)</p>
+                <h3>南方科技大学 · 学生助理</h3>
+                <p>计算机程序设计基础 A</p>
             </div>
         </div>
 
         <div class="experience">
-            <h2>项目经历 | Project Experience</h2>
+            <h2>项目经历</h2>
             <div class="text-block">
-                <h3>SUSTech XuanKe (2019.9)</h3>
-                <p>基于 Vert.x 的选课程序，理论上支持集群分布式抢课</p>
-                <p>A Program based Vert.x that used to select course</p>
 
                 <h3>SUSTech CS102A OfflineJudge (2019.3)</h3>
                 <p>为了改程序设计课作业实现的测评机。侧重于发现代码中的错误，并尝试自动修复错误</p>
-                <p>An offline judge for CS102A. Focus on mistakes discovery and fixing automatically</p>
 
                 <h3>YuyukoMod (2018.7)</h3>
                 <p>游戏 Slay The Spire 的MOD，在 Steam 游戏平台上取得 2w+ 的下载量</p>
-                <p>A MOD of the game Slay The Spire. Gain more than 20,000 downloads on Steam</p>
 
                 <h3>Lang (2017.12)</h3>
                 <p>尝试学习编译原理时制作的简陋的解释器</p>
-                <p>A simple interpreter for a try on learning compilers</p>
 
             </div>
         </div>
 
         <div class="experience">
-            <h2>教育经历 | Educational Experience</h2>
+            <h2>教育经历</h2>
             <div class="text-block">
-                <h3>南方科技大学 · 本科 | Southern University of Science and Technology (2018.09 - )</h3>
-                <p>计算机科学与技术专业 | Computer Science and Technology</p>
-
-                <h3>台州市书生中学 | Sunson Middle School (2015.09 - 2018.06)</h3>
+                <h3>南方科技大学 · 本科(2018.09 - )</h3>
+                <p>计算机科学与工程系</p>
             </div>
         </div>
 
         <div class="experience">
-            <h2>竞赛经历 | Competition Experience</h2>
+            <h2>竞赛经历</h2>
             <div class="text-block">
-                <h3>ASC19 世界大学生超级计算机竞赛 初赛二等奖 | The Second Class Prize of ASC19 Student Supercomputer Challenge
-                    Preliminary Contest (2019.03)</h3>
-                <h3>2018 南方科技大学程序设计竞赛 三等奖 | The Third Class Honor of 2018 SUSTech Programming Contest (2018.12)</h3>
+                <h3>ASC19 世界大学生超级计算机竞赛 · 初赛二等奖 (2019.03)</h3>
+                <h3>2018 南方科技大学程序设计竞赛 · 三等奖 (2018.12)</h3>
+                <h3>第二届南方科技大学程序设计竞赛 · 三等奖 (2019.12)</h3>
             </div>
         </div>
 
         <div class="experience">
-            <h2>技术栈 | Stacks</h2>
+            <h2>技术栈</h2>
             <div class="text-block">
                 <h3>Java (2014)</h3>
-                <h3>Html、CSS、JavaScript (2016)</h3>
+                <h3>Html, CSS, JavaScript (2016)</h3>
                 <h3>Kotlin (2017)</h3>
                 <h3>Python (2018)</h3>
                 <h3>Haskell (2019)</h3>
@@ -98,6 +117,12 @@
         </div>
     </div>
 </div>
-
+<footer class="footer-box">
+    <div class="footer on-print">
+        访问
+        <a href="https://resume.gogo.moe/2020_Google_STEP/zh_cn/">https://resume.gogo.moe/2020_Google_STEP/zh_cn/</a>
+        获取详细信息
+    </div>
+</footer>
 </body>
 </html>
