--- a/2021_Google_SWE/zh_cn/index.html
+++ b/2021_Google_SWE/zh_cn/index.html
@@ -79,6 +79,9 @@
             <h2>项目经历</h2>
             <div class="text-block">
 
+                <h3>TUN on Dns (2019.12)</h3>
+                <p>计算机网络课程的project，基于DNS实现的TUN隧道及代理</p>
+
                 <h3>SUSTech CS102A OfflineJudge (2019.3)</h3>
                 <p>为了改程序设计课作业实现的测评机。侧重于发现代码中的错误，并尝试自动修复错误</p>
 
