--- a/2021_Google_SWE/en_us/index.html
+++ b/2021_Google_SWE/en_us/index.html
@@ -72,7 +72,7 @@
                 <h3>Southern University of Science and Technology · Students Assistant</h3>
                 <p>Introduce to Computer Programming A (2019 Spring, 2019 Autumn, 2020 Autumn)</p>
                 <p>Computer System Design and Applications A (2020 Spring)</p>
-                <h3>Shanghai Luogu Network Technology Co., Ltd. · Frontend intern</h3>
+                <h3>Shanghai Luogu Network Technology Co., Ltd. · Frontend Intern</h3>
                 <p>Participated in and improved a web slides editor for online course(2020.07-2020.08)</p>
             </div>
         </div>
